--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,23 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "fastapi>=0.115.14",
     "ipykernel>=6.29.5",
     "ipython>=9.3.0",
     "kagglehub>=0.3.12",
     "matplotlib>=3.10.3",
     "numpy>=2.3.0",
+    "openpyxl>=3.1.5",
     "pandas>=2.3.0",
     "pip>=25.1.1",
+    "pytz>=2025.2",
     "scikit-learn>=1.7.0",
     "seaborn>=0.13.2",
+    "snowflake-connector-python>=3.16.0",
+    "uvicorn>=0.35.0",
+]
+
+[tool.uv.workspace]
+members = [
+    "tictactoe",
 ]
